[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "elaboratory"
version = "0.0.1"
authors = [
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"},
]
description = "Package description"
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["elaboratory"]

dependencies = [
    "PyGithub >= 2.6.0",
    "requests >= 2.32.3",
    "click >= 8.3.0"
]

[project.scripts]
elaboratory = "elaboratory.cli:run"

[project.urls]
"Homepage" = "https://github.com/alxfed/elaboratory"